--- a/toastmessage/templates/toastmessages_fragment.html
+++ b/toastmessage/templates/toastmessages_fragment.html
@@ -2,9 +2,9 @@
   $(window).load(function(){
     {% for message in messages %}
       {% if message.tags in 'success,warning,error, notice' %}
-        $().toastmessage('showToast', {text : "{{ message }}", stayTime: 10000, type : '{{ message.tags|lower }}'});
+        $().toastmessage('showToast', {text : "{{ message }}", stayTime: 10000, type : '{{ message.tags|lower }}', sticky : true});
       {% else %}
-      	$().toastmessage('showToast', {text : "{{ message }}", stayTime: 10000, type : 'notice'});
+      	$().toastmessage('showToast', {text : "{{ message }}", stayTime: 10000, type : 'notice', sticky : true});
       {% endif %}
     {% endfor %}
   });
